properly parse url in snaks